--- a/Vidly.csproj
+++ b/Vidly.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -45,6 +46,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -112,12 +119,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core">
       <HintPath>packages\Microsoft.AspNet.Identity.Core.2.2.3\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
     </Reference>
@@ -168,22 +169,81 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202205241716019_InitialModel.cs" />
+    <Compile Include="Migrations\202205241716019_InitialModel.designer.cs">
+      <DependentUpon>202205241716019_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205241726391_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\202205241726391_AddIsSubscribedToCustomer.designer.cs">
+      <DependentUpon>202205241726391_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205241732316_AddMembershipType.cs" />
+    <Compile Include="Migrations\202205241732316_AddMembershipType.designer.cs">
+      <DependentUpon>202205241732316_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205241734378_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\202205241734378_PopulateMembershipTypes.designer.cs">
+      <DependentUpon>202205241734378_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205241743587_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\202205241743587_ApplyAnnotationsToCustomerName.designer.cs">
+      <DependentUpon>202205241743587_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205241829008_AddNameToMembershipType.cs" />
+    <Compile Include="Migrations\202205241829008_AddNameToMembershipType.designer.cs">
+      <DependentUpon>202205241829008_AddNameToMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205241831185_UpdateMembershipTypesWithNames.cs" />
+    <Compile Include="Migrations\202205241831185_UpdateMembershipTypesWithNames.designer.cs">
+      <DependentUpon>202205241831185_UpdateMembershipTypesWithNames.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205241836165_UpdateMembershipTypesWithNames1.cs" />
+    <Compile Include="Migrations\202205241836165_UpdateMembershipTypesWithNames1.designer.cs">
+      <DependentUpon>202205241836165_UpdateMembershipTypesWithNames1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205241849576_AddedDobToCustomer.cs" />
+    <Compile Include="Migrations\202205241849576_AddedDobToCustomer.designer.cs">
+      <DependentUpon>202205241849576_AddedDobToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205241908275_AddedGenreAndOtherPropsToMovie.cs" />
+    <Compile Include="Migrations\202205241908275_AddedGenreAndOtherPropsToMovie.designer.cs">
+      <DependentUpon>202205241908275_AddedGenreAndOtherPropsToMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205241909559_PopulateGenres.cs" />
+    <Compile Include="Migrations\202205241909559_PopulateGenres.designer.cs">
+      <DependentUpon>202205241909559_PopulateGenres.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205241913370_PopulateGenres1.cs" />
+    <Compile Include="Migrations\202205241913370_PopulateGenres1.designer.cs">
+      <DependentUpon>202205241913370_PopulateGenres1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202205241926004_AddedGenreIdToMovies.cs" />
+    <Compile Include="Migrations\202205241926004_AddedGenreIdToMovies.designer.cs">
+      <DependentUpon>202205241926004_AddedGenreIdToMovies.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CustomersViewModel.cs" />
+    <Compile Include="ViewModels\MoviesViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap-lumen.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -240,6 +300,11 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Movies\Random.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -256,6 +321,47 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202205241716019_InitialModel.resx">
+      <DependentUpon>202205241716019_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205241726391_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>202205241726391_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205241732316_AddMembershipType.resx">
+      <DependentUpon>202205241732316_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205241734378_PopulateMembershipTypes.resx">
+      <DependentUpon>202205241734378_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205241743587_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>202205241743587_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205241829008_AddNameToMembershipType.resx">
+      <DependentUpon>202205241829008_AddNameToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205241831185_UpdateMembershipTypesWithNames.resx">
+      <DependentUpon>202205241831185_UpdateMembershipTypesWithNames.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205241836165_UpdateMembershipTypesWithNames1.resx">
+      <DependentUpon>202205241836165_UpdateMembershipTypesWithNames1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205241849576_AddedDobToCustomer.resx">
+      <DependentUpon>202205241849576_AddedDobToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205241908275_AddedGenreAndOtherPropsToMovie.resx">
+      <DependentUpon>202205241908275_AddedGenreAndOtherPropsToMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205241909559_PopulateGenres.resx">
+      <DependentUpon>202205241909559_PopulateGenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205241913370_PopulateGenres1.resx">
+      <DependentUpon>202205241913370_PopulateGenres1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202205241926004_AddedGenreIdToMovies.resx">
+      <DependentUpon>202205241926004_AddedGenreIdToMovies.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -290,7 +396,10 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
+    <Error Condition="!Exists('packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
   </Target>
+  <Import Project="packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
