--- a/Vidly.csproj
+++ b/Vidly.csproj
@@ -276,8 +276,25 @@
     <Compile Include="Migrations\202205241926004_AddedGenreIdToMovies.designer.cs">
       <DependentUpon>202205241926004_AddedGenreIdToMovies.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202301162209183_SeedUsers.cs" />
+    <Compile Include="Migrations\202301162209183_SeedUsers.designer.cs">
+      <DependentUpon>202301162209183_SeedUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202301162245232_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\202301162245232_AddDrivingLicenseToApplicationUser.designer.cs">
+      <DependentUpon>202301162245232_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202301162332492_AddPhoneNumberToApplicationUser.cs" />
+    <Compile Include="Migrations\202301162332492_AddPhoneNumberToApplicationUser.designer.cs">
+      <DependentUpon>202301162332492_AddPhoneNumberToApplicationUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202301162338005_AddPhoneNumberToApplicationUser1.cs" />
+    <Compile Include="Migrations\202301162338005_AddPhoneNumberToApplicationUser1.designer.cs">
+      <DependentUpon>202301162338005_AddPhoneNumberToApplicationUser1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -285,6 +302,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomersViewModel.cs" />
@@ -529,10 +547,11 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
-    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\List.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
     <Content Include="Views\Movies\MovieForm.cshtml" />
+    <Content Include="Views\Movies\ReadOnlyList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -589,6 +608,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202205241926004_AddedGenreIdToMovies.resx">
       <DependentUpon>202205241926004_AddedGenreIdToMovies.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301162209183_SeedUsers.resx">
+      <DependentUpon>202301162209183_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301162245232_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>202301162245232_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301162332492_AddPhoneNumberToApplicationUser.resx">
+      <DependentUpon>202301162332492_AddPhoneNumberToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301162338005_AddPhoneNumberToApplicationUser1.resx">
+      <DependentUpon>202301162338005_AddPhoneNumberToApplicationUser1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
