--- a/Vidly.csproj
+++ b/Vidly.csproj
@@ -228,6 +228,9 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\CustomersController.cs" />
     <Compile Include="Controllers\Api\MoviesController.cs" />
+    <Compile Include="Controllers\RentalsController.cs" />
+    <Compile Include="Dtos\NewRentalDTO.cs" />
+    <Compile Include="Controllers\Api\NewRentalsController.cs" />
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -308,9 +311,22 @@
     <Compile Include="Migrations\202301162338005_AddPhoneNumberToApplicationUser1.designer.cs">
       <DependentUpon>202301162338005_AddPhoneNumberToApplicationUser1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202301311831434_Added Rental to DbContext.cs" />
+    <Compile Include="Migrations\202301311831434_Added Rental to DbContext.designer.cs">
+      <DependentUpon>202301311831434_Added Rental to DbContext.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202301311835050_Added Customer and Movie properties to Rental model.cs" />
+    <Compile Include="Migrations\202301311835050_Added Customer and Movie properties to Rental model.designer.cs">
+      <DependentUpon>202301311835050_Added Customer and Movie properties to Rental model.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202301311942334_Added %27NumberAvailable%27 to Movie model.cs" />
+    <Compile Include="Migrations\202301311942334_Added %27NumberAvailable%27 to Movie model.designer.cs">
+      <DependentUpon>202301311942334_Added %27NumberAvailable%27 to Movie model.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\Rental.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -440,16 +456,23 @@
     <Content Include="Content\DataTables\images\sort_desc.png" />
     <Content Include="Content\DataTables\images\sort_desc_disabled.png" />
     <Content Include="Content\DataTables\swf\flashExport.swf" />
+    <Content Include="Content\toastr.css" />
+    <Content Include="Content\toastr.min.css" />
+    <Content Include="Content\typeahead.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\bloodhound.js" />
+    <Content Include="Scripts\bloodhound.min.js" />
     <Content Include="Scripts\bootbox.js" />
     <Content Include="Scripts\bootbox.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\DataTables\css\mixins.scss" />
     <Content Include="Content\DataTables\css\common.scss" />
+    <Content Include="Content\toastr.scss" />
+    <Content Include="Content\toastr.less" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
@@ -525,6 +548,12 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\toastr.js" />
+    <Content Include="Scripts\toastr.min.js" />
+    <Content Include="Scripts\typeahead.bundle.js" />
+    <Content Include="Scripts\typeahead.bundle.min.js" />
+    <Content Include="Scripts\typeahead.jquery.js" />
+    <Content Include="Scripts\typeahead.jquery.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -568,9 +597,11 @@
     <Content Include="Views\Customers\CustomerForm.cshtml" />
     <Content Include="Views\Movies\MovieForm.cshtml" />
     <Content Include="Views\Movies\ReadOnlyList.cshtml" />
+    <Content Include="Views\Rentals\New.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\NewRentals\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -636,6 +667,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202301162338005_AddPhoneNumberToApplicationUser1.resx">
       <DependentUpon>202301162338005_AddPhoneNumberToApplicationUser1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301311831434_Added Rental to DbContext.resx">
+      <DependentUpon>202301311831434_Added Rental to DbContext.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301311835050_Added Customer and Movie properties to Rental model.resx">
+      <DependentUpon>202301311835050_Added Customer and Movie properties to Rental model.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301311942334_Added %27NumberAvailable%27 to Movie model.resx">
+      <DependentUpon>202301311942334_Added %27NumberAvailable%27 to Movie model.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
